--- a/html/united-custom.scss
+++ b/html/united-custom.scss
@@ -122,10 +122,10 @@ $web-font-path: "https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&fa
 }
 
 
-// quarto-scss-analysis-annotation { "origin": null }
 
 
 
+// Talks
 .talks {
     .talk-entry {
         display: flex;
@@ -135,6 +135,7 @@ $web-font-path: "https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&fa
         margin-bottom: 1.5em;
         column-gap: 1em;
 
+      
         .body {
             flex: 1 0 85%;
         }
@@ -192,9 +193,75 @@ $web-font-path: "https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&fa
 
 
 
+
+
+// Data Science
+.data-science {
+    .data-science-entry {
+        display: flex;
+        flex-direction: row;
+        font-family: $headings-font-family;
+        line-height: 1.3;
+        margin-bottom: 1.5em;
+        column-gap: 1em;
+
+        .body {
+            flex: 1 0 85%;
+        }
+
+        .metadata {
+            flex: 1 0 15%;
+        }
+
+        .title {
+            font-weight: 500;
+            font-size: 1.8em;
+            margin-bottom: 0.2em;
+            line-height: 1.2;
+        }
+
+        .location {
+            font-weight: 300; 
+            font-size: 0.85em;
+            margin-top: 0em;
+            text-align: left;
+        }
+        
+        .description {
+            font-weight: 300;
+            font-size: 1em;
+            margin-bottom: 0.3em;
+        }
+
+        .categories {
+            font-weight: 300;
+            font-size: 0.85em;
+            margin-top: 1.5em;
+            margin-bottom: .5em;
+            text-align: left;
+        } 
+
+        ul.data-science-links {
+            padding: 0 0.5em;
+            background-color: shift-color(white, -10%);
+            margin-bottom: 0;
+
+            .data-science-link {
+                display: block;
+                white-space: nowrap;
+                margin: 0;
+                padding: 0.5em 1em 0.5em 0;
+                font-size: 0.9em;
+            }
+        }
+    }
+}
+
+
+
+
 // Research
 .quarto-title-block {
-
 
     .body {
       flex: 1 0 85%;
