--- a/html/united-custom.scss
+++ b/html/united-custom.scss
@@ -50,15 +50,15 @@ $min-contrast-ratio:   1.8 !default;
 $body-color:                $gray-800 !default;
 
 // Links
-$link-color: $orange !default;
+$link-color: $red !default;
 $link-decoration: none !default;
-$link-hover-color: $orange !default;
-$link-hover-decoration: underline !default;
+$link-hover-color: $gray-800 !default;
+$link-hover-decoration: none !default;
 
 // Navbar
 $navbar-bg: $gray-900 !default;
 $navbar-fg: $white !default;
-$navbar-hl: $green !default;
+$navbar-hl: $orange !default;
 
 // Title Banner
 $banner-bg: $gray-800;
@@ -218,6 +218,7 @@ $web-font-path: "https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&fa
             font-size: 1.8em;
             margin-bottom: 0.2em;
             line-height: 1.2;
+            color: $black;
         }
 
         .location {
